Cleanup training code

--- a/image_classification/exploration.ipynb
+++ b/image_classification/exploration.ipynb
@@ -2,14 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-12-24T19:12:21.352238800Z",
-     "start_time": "2023-12-24T19:12:10.970564100Z"
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -26,7 +22,8 @@
     "from util import set_seed\n",
     "from weight_init import init_for_relu\n",
     "from sklearn.model_selection import ParameterGrid\n",
-    "from datasets import FashionMNIST\n"
+    "from datasets import FashionMNIST\n",
+    "from experiment import train"
    ]
   },
   {
@@ -190,7 +187,7 @@
     "        \"dropout\": trial.suggest_float(\"dropout\", 0.1, 0.5, log=True),\n",
     "        \"lr\": trial.suggest_float(\"lr\", 1e-5, 1e-1, log=True),\n",
     "        \"wd\": trial.suggest_float(\"wd\", 1e-5, 1e-1, log=True),\n",
-    "        \"opt\": trial.suggest_categorical(\"opt\", [\"AdamW\", \"RMSprop\"]),\n",
+    "        \"opt\": trial.suggest_categorical(\"opt\", [\"SGD\", \"RAdam\"]),\n",
     "    }\n",
     "\n",
     "    data_module = FashionMNIST.FashionMNISTDataModule()\n",
@@ -199,30 +196,12 @@
     "        n_classes=n_classes,\n",
     "        **params).apply(init_for_relu)\n",
     "\n",
-    "    checkpoint_callback = pl.callbacks.ModelCheckpoint(\n",
-    "        save_top_k=1,\n",
-    "        monitor=\"accuracy/val\",\n",
-    "        mode=\"max\",\n",
-    "        filename=\"best-{epoch:02d}\",\n",
-    "        save_last=True,\n",
-    "    )\n",
-    "\n",
-    "    tb_logger = pl_loggers.TensorBoardLogger(save_dir='./results',\n",
-    "                                             name=data_module.dataset_name,\n",
-    "                                             sub_dir=model.__class__.__name__)\n",
-    "\n",
-    "    trainer = pl.Trainer(max_epochs=10,\n",
-    "                         limit_train_batches=200,\n",
-    "                         callbacks=[\n",
-    "                             checkpoint_callback,\n",
-    "                         ],\n",
-    "                         logger=tb_logger,\n",
-    "                         )\n",
-    "\n",
-    "    trainer.fit(model,\n",
-    "                data_module,\n",
-    "                # ckpt_path='./results/fashion_mnist/version_5/checkpoints/best-epoch=04.ckpt'\n",
-    "                )\n",
+    "    trainer = train(model,\n",
+    "                    data_module,\n",
+    "                    monitored_metric='accuracy/val',\n",
+    "                    mode='max',\n",
+    "                    max_epochs=10,\n",
+    "                    limit_train_batches=200)\n",
     "\n",
     "    return trainer.callback_metrics[\"accuracy/val\"].item()\n",
     "\n",
@@ -249,424 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: True (cuda), used: True\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
-      "Restoring states from the checkpoint path at results/FashionMNIST/version_2/checkpoints/last.ckpt\n",
-      "D:\\anaconda3\\envs\\ailab\\lib\\site-packages\\lightning\\pytorch\\callbacks\\model_checkpoint.py:347: The dirpath has changed from './results\\\\FashionMNIST\\\\version_2\\\\checkpoints' to './results\\\\FashionMNIST\\\\version_12\\\\checkpoints', therefore `best_model_score`, `kth_best_model_path`, `kth_value`, `last_model_path` and `best_k_models` won't be reloaded. Only `best_model_path` will be reloaded.\n",
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-      "Loading `train_dataloader` to estimate number of stepping batches.\n",
-      "\n",
-      "  | Name       | Type       | Params\n",
-      "------------------------------------------\n",
-      "0 | classifier | Sequential | 1.2 M \n",
-      "------------------------------------------\n",
-      "1.2 M     Trainable params\n",
-      "0         Non-trainable params\n",
-      "1.2 M     Total params\n",
-      "4.920     Total estimated model params size (MB)\n",
-      "Restored all states from the checkpoint at results/FashionMNIST/version_2/checkpoints/last.ckpt\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "Sanity Checking: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "c7cabae43338460a8557e0a094c895e2"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Training: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "d8e9d282bd45489ab27a4fd6e12295d0"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "d12e43eabc1843ee8855d313912ff5d5"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "a991cf284f534618b5fd78eb24d829c7"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "6b97e912a2494b1083f34cb336ffc0cb"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "0661698e734c459089bc04c3063c9703"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "3fa9baefe9ff47c6979f8539794f823c"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "e756695510b04d2e8f1a0fbe74dad46a"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "a88b8ee0276a4a8b8e74f65588139b57"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "1ac5930da5f142a5b7857125bf2141f9"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "d02b4fb5909b43ab932c5f310c93b0d7"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "393bd39d1bbf4bdc965053d9332c088d"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "677dedf1d17c41f99b32daf699a68186"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "1f15a79123da4ac78ed6c53e3124f788"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "5738e159aa3b452c9f40e3ece89f4ed9"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "68fdd63315004a1f8722bb881e5a4914"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "146c0f77f68e49db86bbe3dfd879e310"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "d1794ea3548b427791782910ff998c71"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "b25599c3844f4288ae13fd4a357a9ad9"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "c4c3ca11da1f465f9107631c82b8e209"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "ffe0636dfef74a239b6ab0f38b10c28f"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "c5ae3c9342b349ca9bf99ddb63999a19"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "92c1fb4c9d0f4111a2d4672d525c19ac"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "eb9bf8eb81a941d2a553bd2076150f4d"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "01dd303119e449b3a8d9b78bf991873b"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "f6678dbf5b9b403c82b9b5c17d060454"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "0bee237b920548b1ba220c1cdfad4d50"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "d5a2dd2a574042428fdde959640f9834"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "553b9f19e2734444afd7281272c2f533"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "e31c2ac07dae4adbaee844577359eb8a"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "fdc8f18fc2e44fd08820f0f135824a60"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "Validation: |          | 0/? [00:00<?, ?it/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "c98fc2e297624f89ad9dd9f301586acb"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`Trainer.fit` stopped: `max_epochs=40` reached.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "data_module = FashionMNIST.FashionMNISTDataModule()\n",
     "ckpt_path = \"results/FashionMNIST/version_2/checkpoints/last.ckpt\"\n",
@@ -697,11 +260,7 @@
     "            )"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-12-24T20:09:59.867576600Z",
-     "start_time": "2023-12-24T19:12:29.877343600Z"
-    }
+    "collapsed": false
    },
    "id": "fc8ce6eb314b5ff8"
   },
